iptables
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [31:5960]

:DDOS-RANDUM - [0:0]
:DDOS-AMP - [0:0]
:DDOS-BLOCK - [0:0]
:DROP-A - [0:0]
:DROP-AAAA - [0:0]
:DROP-ANY - [0:0]
:CVE-2015-7547 - [0:0]
:HEAD - [0:0]
:ACL - [0:0]
:FOOT - [0:0]
:FILTER - [0:0]

-A INPUT -j HEAD
-A INPUT -j DDOS-RANDUM
-A INPUT -j DDOS-AMP
-A INPUT -j DDOS-BLOCK
-A INPUT -j CVE-2015-7547
-A INPUT -j FOOT
-A INPUT -j ACL
-A FILTER -j DROP-A
-A FILTER -j DROP-AAAA
-A FILTER -j DROP-ANY

-A HEAD -i eth0 -p udp -m udp --dport 53 -m dns --qtype SOA -j LOG
-A HEAD -i eth0 -p udp -m udp --dport 53 -m dns --rmatch --qname example.jp -j LOG
-A HEAD -i eth0 -p udp -m udp --dport 53 -m dns --qtype A --rmatch --qname example.net ! --maxsize 12 -j LOG
-A HEAD -i eth0 -p udp -m udp --dport 53 -m dns --rmatch --qname example.com ! --maxsize 12 -j LOG
-A HEAD -i eth0 -p udp -m udp --dport 53 -m dns --aa -j LOG
-A HEAD -i eth0 -p udp -m udp --dport 53 -m dns --tc -j LOG
#-A HEAD -i eth0 -p udp -m udp --dport 53 -m dns --rd -j LOG
#-A HEAD -i eth0 -p udp -m udp --dport 53 -m dns --ra -j LOG
-A HEAD -i eth0 -p udp -m udp --dport 53 -m dns --ad -j LOG
-A HEAD -i eth0 -p udp -m udp --dport 53 -m dns --cd -j LOG

-A DDOS-RANDUM -p udp -m udp --dport 53 -m string --from 41 --to 65535 --hex-string "|03777777053636366e6103636f6d|" --algo bm -m comment --comment "DROP www.666na.com RANDUM" -j DROP-A
-A DDOS-AMP -p udp -m udp --dport 53 -m string --from 41 --to 65535 --hex-string "|08616d706c6973747303636f6d|" --algo bm -m comment --comment "DROP amplists.com AMP-A" -j DROP-A
-A DDOS-AMP -p udp -m udp --dport 53 -m string --from 41 --to 65535 --hex-string "|08616d706c6973747303636f6d|" --algo bm -m comment --comment "DROP amplists.com AMP-ANY" -j DROP-ANY
-A DDOS-BLOCK -s 192.168.0.1/32 -m comment --comment "BLOCK IP" -j DROP

-A CVE-2015-7547 -p udp -m udp --sport 53 -m string --from 41 --hex-string "|0000010001|" --algo bm -m length --length 2048: -j DROP -m comment --comment 'CVE-2015-7547-UDP-A-Block'
-A CVE-2015-7547 -p tcp -m tcp --sport 53 -m string --from 41 --hex-string "|0000010001|" --algo bm -m state --state ESTABLISHED -j DROP -m comment --comment 'CVE-2015-7547-TCP-A-Block'
-A CVE-2015-7547 -p udp -m udp --sport 53 -m string --from 41 --hex-string "|00001c0001|" --algo bm -m length --length 2048: -j DROP -m comment --comment 'CVE-2015-7547-UDP-AAAA-Block'
-A CVE-2015-7547 -p tcp -m tcp --sport 53 -m string --from 41 --hex-string "|00001c0001|" --algo bm -m state --state ESTABLISHED -j DROP -m comment --comment 'CVE-2015-7547-TCP-AAAA-Block'

-A FOOT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FOOT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A FOOT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A FOOT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A FOOT -i lo -j ACCEPT
-A FOOT -p icmp -j ACCEPT

-A ACL -p udp -m udp --dport 53 -j ACCEPT
-A ACL -p tcp -m tcp --dport 53 -j ACCEPT

-A ACL -p tcp -m tcp --dport 22 -j ACCEPT
-A ACL -p tcp -m tcp --dport 80 -j ACCEPT
-A ACL -p tcp -m tcp --dport 8083 -j ACCEPT

-A DROP-A -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000010001|" --algo bm -j DROP -m comment --comment 'DROP-A'
#-A DROP-NS -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000020001|" --algo bm -j DROP -m comment --comment 'DROP-NS'
#-A DROP-MD -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000030001|" --algo bm -j DROP -m comment --comment 'DROP-MD'
#-A DROP-MF -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000040001|" --algo bm -j DROP -m comment --comment 'DROP-MF'
#-A DROP-CNAME -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000050001|" --algo bm -j DROP -m comment --comment 'DROP-CNAME'
#-A DROP-SOA -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000060001|" --algo bm -j DROP -m comment --comment 'DROP-SOA'
#-A DROP-MB -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000070001|" --algo bm -j DROP -m comment --comment 'DROP-MB'
#-A DROP-MG -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000080001|" --algo bm -j DROP -m comment --comment 'DROP-MG'
#-A DROP-MR -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000090001|" --algo bm -j DROP -m comment --comment 'DROP-MR'
#-A DROP-NULL -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00000a0001|" --algo bm -j DROP -m comment --comment 'DROP-NULL'
#-A DROP-WKS -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00000b0001|" --algo bm -j DROP -m comment --comment 'DROP-WKS'
#-A DROP-PTR -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00000c0001|" --algo bm -j DROP -m comment --comment 'DROP-PTR'
#-A DROP-HINFO -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00000d0001|" --algo bm -j DROP -m comment --comment 'DROP-HINFO'
#-A DROP-MINFO -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00000e0001|" --algo bm -j DROP -m comment --comment 'DROP-MINFO'
#-A DROP-MX -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00000f0001|" --algo bm -j DROP -m comment --comment 'DROP-MX'
#-A DROP-TXT -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000100001|" --algo bm -j DROP -m comment --comment 'DROP-TXT'
#-A DROP-RP -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000110001|" --algo bm -j DROP -m comment --comment 'DROP-RP'
#-A DROP-AFSDB -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000120001|" --algo bm -j DROP -m comment --comment 'DROP-AFSDB'
#-A DROP-X25 -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000130001|" --algo bm -j DROP -m comment --comment 'DROP-X25'
#-A DROP-ISDN -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000140001|" --algo bm -j DROP -m comment --comment 'DROP-ISDN'
#-A DROP-RT -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000150001|" --algo bm -j DROP -m comment --comment 'DROP-RT'
#-A DROP-NSAP -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000160001|" --algo bm -j DROP -m comment --comment 'DROP-NSAP'
#-A DROP-NSAP-PTR -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000170001|" --algo bm -j DROP -m comment --comment 'DROP-NSAP_PTR'
#-A DROP-SIG -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000180001|" --algo bm -j DROP -m comment --comment 'DROP-SIG'
#-A DROP-KEY -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000190001|" --algo bm -j DROP -m comment --comment 'DROP-KEY'
#-A DROP-PX -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00001a0001|" --algo bm -j DROP -m comment --comment 'DROP-PX'
#-A DROP-GPOS -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00001b0001|" --algo bm -j DROP -m comment --comment 'DROP-GPOS'
-A DROP-AAAA -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00001c0001|" --algo bm -j DROP -m comment --comment 'DROP-AAAA'
#-A DROP-LOC -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00001d0001|" --algo bm -j DROP -m comment --comment 'DROP-LOC'
#-A DROP-NXT -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00001e0001|" --algo bm -j DROP -m comment --comment 'DROP-NXT'
#-A DROP-EID -p udp -m udp --dport 53 -m string --from 41 --hex-string "|00001f0001|" --algo bm -j DROP -m comment --comment 'DROP-EID'
-A DROP-ANY -p udp -m udp --dport 53 -m string --from 41 --hex-string "|0000ff0001|" --algo bm -j DROP -m comment --comment 'DROP-ANY'


COMMIT
